...
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/profile_photo" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name: Yuxing Zhou"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/netID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NetID: 9962189345"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
