...
        android:textAlignment="center"
        android:textColor="#991B1E"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/previousBooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="87dp"
        android:layout_marginBottom="52dp"
        android:text="View Previous Bookings" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
...
